Fixed overflow-x CSS bug

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1029,3 +1029,7 @@
 .caseimage.last{
 	margin-bottom: 0px;
 }
+
+*{
+	overflow-x: hidden;
+}
